--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   width: 100%;
+  min-width: 0;
   overflow-x: auto;
 }
 
